backend/mocks/resources/network-policies.json
{
  "apiVersion": "v1",
  "kind": "List",
  "metadata": {
    "resourceVersion": "1000"
  },
  "items": [
    {
      "apiVersion": "networking.k8s.io/v1",
      "kind": "NetworkPolicy",
      "metadata": {
        "annotations": {
          "argocd.argoproj.io/tracking-id": "games:networking.k8s.io/NetworkPolicy:games/games-nginx"
        },
        "generation": 1,
        "labels": {
          "app.kubernetes.io/instance": "games",
          "app.kubernetes.io/managed-by": "Helm",
          "app.kubernetes.io/name": "nginx",
          "app.kubernetes.io/version": "1.29.5",
          "helm.sh/chart": "nginx-22.4.7"
        },
        "name": "anon-networkpolicies-1",
        "namespace": "app-dev"
      },
      "spec": {
        "egress": [
          {}
        ],
        "ingress": [
          {
            "ports": [
              {
                "port": 8080,
                "protocol": "TCP"
              },
              {
                "port": 8443,
                "protocol": "TCP"
              },
              {
                "port": 9113,
                "protocol": "TCP"
              }
            ]
          }
        ],
        "podSelector": {
          "matchLabels": {
            "app.kubernetes.io/instance": "games",
            "app.kubernetes.io/name": "nginx"
          }
        },
        "policyTypes": [
          "Ingress",
          "Egress"
        ]
      }
    },
    {
      "apiVersion": "networking.k8s.io/v1",
      "kind": "NetworkPolicy",
      "metadata": {
        "annotations": {
          "argocd.argoproj.io/tracking-id": "games:networking.k8s.io/NetworkPolicy:games/games-nginx"
        },
        "generation": 1,
        "labels": {
          "app.kubernetes.io/instance": "games",
          "app.kubernetes.io/managed-by": "Helm",
          "app.kubernetes.io/name": "nginx",
          "app.kubernetes.io/version": "1.29.5",
          "helm.sh/chart": "nginx-22.4.7"
        },
        "name": "anon-networkpolicies-2",
        "namespace": "monitoring"
      },
      "spec": {
        "egress": [
          {}
        ],
        "ingress": [
          {
            "ports": [
              {
                "port": 8080,
                "protocol": "TCP"
              },
              {
                "port": 8443,
                "protocol": "TCP"
              },
              {
                "port": 9113,
                "protocol": "TCP"
              }
            ]
          }
        ],
        "podSelector": {
          "matchLabels": {
            "app.kubernetes.io/instance": "games",
            "app.kubernetes.io/name": "nginx"
          }
        },
        "policyTypes": [
          "Ingress",
          "Egress"
        ]
      }
    },
    {
      "apiVersion": "networking.k8s.io/v1",
      "kind": "NetworkPolicy",
      "metadata": {
        "annotations": {
          "argocd.argoproj.io/tracking-id": "games:networking.k8s.io/NetworkPolicy:games/games-nginx"
        },
        "generation": 1,
        "labels": {
          "app.kubernetes.io/instance": "games",
          "app.kubernetes.io/managed-by": "Helm",
          "app.kubernetes.io/name": "nginx",
          "app.kubernetes.io/version": "1.29.5",
          "helm.sh/chart": "nginx-22.4.7"
        },
        "name": "anon-networkpolicies-3",
        "namespace": "app-prod"
      },
      "spec": {
        "egress": [
          {}
        ],
        "ingress": [
          {
            "ports": [
              {
                "port": 8080,
                "protocol": "TCP"
              },
              {
                "port": 8443,
                "protocol": "TCP"
              },
              {
                "port": 9113,
                "protocol": "TCP"
              }
            ]
          }
        ],
        "podSelector": {
          "matchLabels": {
            "app.kubernetes.io/instance": "games",
            "app.kubernetes.io/name": "nginx"
          }
        },
        "policyTypes": [
          "Ingress",
          "Egress"
        ]
      }
    },
    {
      "apiVersion": "networking.k8s.io/v1",
      "kind": "NetworkPolicy",
      "metadata": {
        "annotations": {
          "argocd.argoproj.io/tracking-id": "games:networking.k8s.io/NetworkPolicy:games/games-nginx"
        },
        "generation": 1,
        "labels": {
          "app.kubernetes.io/instance": "games",
          "app.kubernetes.io/managed-by": "Helm",
          "app.kubernetes.io/name": "nginx",
          "app.kubernetes.io/version": "1.29.5",
          "helm.sh/chart": "nginx-22.4.7"
        },
        "name": "anon-networkpolicies-4",
        "namespace": "app-dev"
      },
      "spec": {
        "egress": [
          {}
        ],
        "ingress": [
          {
            "ports": [
              {
                "port": 8080,
                "protocol": "TCP"
              },
              {
                "port": 8443,
                "protocol": "TCP"
              },
              {
                "port": 9113,
                "protocol": "TCP"
              }
            ]
          }
        ],
        "podSelector": {
          "matchLabels": {
            "app.kubernetes.io/instance": "games",
            "app.kubernetes.io/name": "nginx"
          }
        },
        "policyTypes": [
          "Ingress",
          "Egress"
        ]
      }
    },
    {
      "apiVersion": "networking.k8s.io/v1",
      "kind": "NetworkPolicy",
      "metadata": {
        "annotations": {
          "argocd.argoproj.io/tracking-id": "games:networking.k8s.io/NetworkPolicy:games/games-nginx"
        },
        "generation": 1,
        "labels": {
          "app.kubernetes.io/instance": "games",
          "app.kubernetes.io/managed-by": "Helm",
          "app.kubernetes.io/name": "nginx",
          "app.kubernetes.io/version": "1.29.5",
          "helm.sh/chart": "nginx-22.4.7"
        },
        "name": "anon-networkpolicies-5",
        "namespace": "app-prod"
      },
      "spec": {
        "egress": [
          {}
        ],
        "ingress": [
          {
            "ports": [
              {
                "port": 8080,
                "protocol": "TCP"
              },
              {
                "port": 8443,
                "protocol": "TCP"
              },
              {
                "port": 9113,
                "protocol": "TCP"
              }
            ]
          }
        ],
        "podSelector": {
          "matchLabels": {
            "app.kubernetes.io/instance": "games",
            "app.kubernetes.io/name": "nginx"
          }
        },
        "policyTypes": [
          "Ingress",
          "Egress"
        ]
      }
    },
    {
      "apiVersion": "networking.k8s.io/v1",
      "kind": "NetworkPolicy",
      "metadata": {
        "annotations": {
          "argocd.argoproj.io/tracking-id": "games:networking.k8s.io/NetworkPolicy:games/games-nginx"
        },
        "generation": 1,
        "labels": {
          "app.kubernetes.io/instance": "games",
          "app.kubernetes.io/managed-by": "Helm",
          "app.kubernetes.io/name": "nginx",
          "app.kubernetes.io/version": "1.29.5",
          "helm.sh/chart": "nginx-22.4.7"
        },
        "name": "anon-networkpolicies-6",
        "namespace": "default"
      },
      "spec": {
        "egress": [
          {}
        ],
        "ingress": [
          {
            "ports": [
              {
                "port": 8080,
                "protocol": "TCP"
              },
              {
                "port": 8443,
                "protocol": "TCP"
              },
              {
                "port": 9113,
                "protocol": "TCP"
              }
            ]
          }
        ],
        "podSelector": {
          "matchLabels": {
            "app.kubernetes.io/instance": "games",
            "app.kubernetes.io/name": "nginx"
          }
        },
        "policyTypes": [
          "Ingress",
          "Egress"
        ]
      }
    },
    {
      "apiVersion": "networking.k8s.io/v1",
      "kind": "NetworkPolicy",
      "metadata": {
        "annotations": {
          "argocd.argoproj.io/tracking-id": "games:networking.k8s.io/NetworkPolicy:games/games-nginx"
        },
        "generation": 1,
        "labels": {
          "app.kubernetes.io/instance": "games",
          "app.kubernetes.io/managed-by": "Helm",
          "app.kubernetes.io/name": "nginx",
          "app.kubernetes.io/version": "1.29.5",
          "helm.sh/chart": "nginx-22.4.7"
        },
        "name": "anon-networkpolicies-7",
        "namespace": "app-prod"
      },
      "spec": {
        "egress": [
          {}
        ],
        "ingress": [
          {
            "ports": [
              {
                "port": 8080,
                "protocol": "TCP"
              },
              {
                "port": 8443,
                "protocol": "TCP"
              },
              {
                "port": 9113,
                "protocol": "TCP"
              }
            ]
          }
        ],
        "podSelector": {
          "matchLabels": {
            "app.kubernetes.io/instance": "games",
            "app.kubernetes.io/name": "nginx"
          }
        },
        "policyTypes": [
          "Ingress",
          "Egress"
        ]
      }
    },
    {
      "apiVersion": "networking.k8s.io/v1",
      "kind": "NetworkPolicy",
      "metadata": {
        "annotations": {
          "argocd.argoproj.io/tracking-id": "games:networking.k8s.io/NetworkPolicy:games/games-nginx"
        },
        "generation": 1,
        "labels": {
          "app.kubernetes.io/instance": "games",
          "app.kubernetes.io/managed-by": "Helm",
          "app.kubernetes.io/name": "nginx",
          "app.kubernetes.io/version": "1.29.5",
          "helm.sh/chart": "nginx-22.4.7"
        },
        "name": "anon-networkpolicies-8",
        "namespace": "monitoring"
      },
      "spec": {
        "egress": [
          {}
        ],
        "ingress": [
          {
            "ports": [
              {
                "port": 8080,
                "protocol": "TCP"
              },
              {
                "port": 8443,
                "protocol": "TCP"
              },
              {
                "port": 9113,
                "protocol": "TCP"
              }
            ]
          }
        ],
        "podSelector": {
          "matchLabels": {
            "app.kubernetes.io/instance": "games",
            "app.kubernetes.io/name": "nginx"
          }
        },
        "policyTypes": [
          "Ingress",
          "Egress"
        ]
      }
    },
    {
      "apiVersion": "networking.k8s.io/v1",
      "kind": "NetworkPolicy",
      "metadata": {
        "annotations": {
          "argocd.argoproj.io/tracking-id": "games:networking.k8s.io/NetworkPolicy:games/games-nginx"
        },
        "generation": 1,
        "labels": {
          "app.kubernetes.io/instance": "games",
          "app.kubernetes.io/managed-by": "Helm",
          "app.kubernetes.io/name": "nginx",
          "app.kubernetes.io/version": "1.29.5",
          "helm.sh/chart": "nginx-22.4.7"
        },
        "name": "anon-networkpolicies-9",
        "namespace": "monitoring"
      },
      "spec": {
        "egress": [
          {}
        ],
        "ingress": [
          {
            "ports": [
              {
                "port": 8080,
                "protocol": "TCP"
              },
              {
                "port": 8443,
                "protocol": "TCP"
              },
              {
                "port": 9113,
                "protocol": "TCP"
              }
            ]
          }
        ],
        "podSelector": {
          "matchLabels": {
            "app.kubernetes.io/instance": "games",
            "app.kubernetes.io/name": "nginx"
          }
        },
        "policyTypes": [
          "Ingress",
          "Egress"
        ]
      }
    }
  ]
}
